syntax = "proto2";
import 'nanopb.proto';

message VersionReq
{
}

message VersionRsp
{
    required string value = 1 [(nanopb).max_length = 15];
}

message PingReq
{
    required int32 pre = 1;
    required string str = 2 [(nanopb).max_length = 31];
}

message PingRsp
{
    required string str = 1 [(nanopb).max_length = 31];
    required int32 post = 2;

}

/* Oneof in a message with other fields */
message CmdMessage
{
    required int32 magic = 1 [ default= 0x12345678 ];
    oneof type
    {
        VersionReq version_req = 10;
        VersionRsp version_rsp = 11;
        PingReq ping_req = 12;
        PingRsp ping_rsp = 13;
    }
}